[package]
name = "stephencoakley-blog"
version = "3.0.0"
edition = "2021"

[dependencies]
comrak = "0.12"
dotenv = "0.15"
harsh = "0.2"
html-escape = "0.2"
include_dir = "0.7"
itertools = "0.10"
maud = "0.23"
md-5 = "0.10"
mysql = "22.1"
once_cell = "1"
pulldown-cmark = "0.9"
regex = "1"
serde_json = "1"
time = "0.3"
toml = "0.5"
vial = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]
