[package]
name = "stephencoakley-blog"
version = "3.0.0"
edition = "2021"

[dependencies]
data-encoding = "2"
dotenv = "0.15"
env_logger = "0.9"
harsh = "0.2"
hmac = "0.12"
html-escape = "0.2"
include_dir = "0.7"
itertools = "0.10"
log = "0.4"
maud = "0.23"
md-5 = "0.10"
once_cell = "1"
pulldown-cmark = "0.9"
rand = "0.8"
regex = "1"
sha2 = "0.10"
syntect = "4"
time = "0.3"
toml = "0.5"

[dependencies.bytemuck]
version = "1.8"
features = ["derive"]

[dependencies.comrak]
version = "0.12"
features = ["syntect"]

[dependencies.poem]
version = "1.3"
features = ["static-files"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["mysql", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1.17.0"
features = ["rt-multi-thread", "macros"]

[build-dependencies]
grass = "0.10"
