[package]
name = "stephencoakley-blog"
version = "3.0.0"
edition = "2021"

[dependencies]
ammonia = "3.1"
data-encoding = "2"
dotenv = "0.15"
env_logger = "0.9"
harsh = "0.2"
hmac = "0.12"
html-escape = "0.2"
itertools = "0.10"
log = "0.4"
maud = "0.23"
md-5 = "0.10"
once_cell = "1"
pulldown-cmark = "0.9"
rand = "0.8"
rayon = "1.5"
regex = "1"
serde_json = "1"
sha2 = "0.10"
toml = "0.5"

[dependencies.bytemuck]
version = "1.8"
features = ["derive"]

[dependencies.poem]
version = "1.3"
features = ["static-files"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["mysql", "runtime-tokio-rustls"]

[dependencies.syntect]
version = "4"
features = ["default-fancy"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde-well-known"]

[dependencies.tokio]
version = "1.17.0"
features = ["rt-multi-thread", "macros", "signal"]

[build-dependencies]
grass = "0.10"

[build-dependencies.comrak]
version = "0.12"
features = ["syntect"]
